# rust_quiz_2021

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml  lint.yml  rust.yml  test copy.yml  test.yml
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
rust_quiz_2021/: all.html  index.html  macro.assert_error_match!.html  macro.assert_error_match.html  macro.mdo!.html  macro.mdo.html  sidebar-items.js
rust_quiz_2021/utils/: index.html  sidebar-items.js
rust_quiz_2021/utils/macros/: index.html
rust_quiz_2021/utils/sagoj0_/: index.html  sidebar-items.js
rust_quiz_2021/utils/tanacchi/: index.html  sidebar-items.js
src/: lib.rs  main.rs  test_util.rs
src/august/: mod.rs
src/august/q_0816/: README.md
src/august/q_0817/: mod.rs
src/august/q_0818/: README.md  mod.rs
src/example/: mod.rs
src/q_0816/: mod.rs
src/q_0817/: mod.rs  q_0817.md
src/q_0818/: mod.rs
src/q_0819/: README.md  mod.rs
src/q_0821/: README.md
src/q_0822/: README.md
src/q_0823/: README.md
src/q_0824/: README.md
src/q_0827/: README.md
src/q_0828/: README.md
src/q_0829/: README.md
src/q_0830/: README.md
src/q_0831/: README.md
src/rust_quiz_2021/: lib.rs.html
src/september/: mod.rs
src/utils/: macros.rs  mod.rs
(+348 files in other folders)
