[package]
name = "rust_quiz_2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
matches = "0.1.9"
rstest = "0.11"
thiserror = "1.0.26"
pretty_assertions = "0.7.2"
difference = "2.0.0"
