[package]
name = "rust_quiz_2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
matches = "0.1.9"
rstest = "0.11"
thiserror = "1.0.26"
pretty_assertions = "0.7.2"
difference = "2.0.0"
approx = "0.5.0"
nalgebra = "0.29.0"
rand = "0.8.4"
itertools = "0.10.1"
num = "0.4.0"
